--- a/index.html
+++ b/index.html
@@ -1,13 +1,197 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MD AFRID FOISAL OPU - Portfolio</title>
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/admin.css">
+    <style>
+/* Dark Cyber Theme */
+:root {
+    --primary-color: #00ff41;
+    --secondary-color: #ff073a;
+    --background-color: #0a0a0a;
+    --text-color: #ffffff;
+    --card-bg: rgba(255, 255, 255, 0.05);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Courier New', monospace;
+    background-color: var(--background-color);
+    color: var(--text-color);
+    overflow-x: hidden;
+}
+
+#app {
+    min-height: 100vh;
+}
+
+/* Hero Section */
+#hero {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+}
+
+#hero-3d {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.hero-content {
+    position: relative;
+    z-index: 2;
+    text-align: center;
+    animation: fadeInUp 2s ease-out;
+}
+
+.hero-content h1 {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+    color: var(--primary-color);
+    text-shadow: 0 0 20px var(--primary-color);
+}
+
+.hero-content p {
+    font-size: 1.2rem;
+    margin-bottom: 0.5rem;
+}
+
+/* Sections */
+section {
+    padding: 5rem 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+section h2 {
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+    color: var(--primary-color);
+    text-align: center;
+}
+
+/* About Section */
+.about-content {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    flex-wrap: wrap;
+}
+
+#profile-pic {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 3px solid var(--primary-color);
+}
+
+/* Skills Section */
+#skills-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+}
+
+.skill-item {
+    background: var(--card-bg);
+    padding: 1rem;
+    border-radius: 8px;
+    border: 1px solid var(--primary-color);
+    transition: transform 0.3s ease;
+}
+
+.skill-item:hover {
+    transform: translateY(-5px);
+}
+
+/* Projects Section */
+#projects-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 2rem;
+}
+
+.project-item {
+    background: var(--card-bg);
+    padding: 1.5rem;
+    border-radius: 8px;
+    border: 1px solid var(--primary-color);
+    transition: transform 0.3s ease;
+}
+
+.project-item:hover {
+    transform: translateY(-5px);
+}
+
+.project-item img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 4px;
+    margin-bottom: 1rem;
+}
+
+/* Contact Section */
+.contact-content {
+    text-align: center;
+}
+
+.contact-content p {
+    margin-bottom: 1rem;
+}
+
+/* Animations */
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.fade-in {
+    animation: fadeInUp 1s ease-out;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .hero-content h1 {
+        font-size: 2rem;
+    }
+
+    .about-content {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    #profile-pic {
+        width: 150px;
+        height: 150px;
+    }
+
+    section {
+        padding: 3rem 1rem;
+    }
+}
+    </style>
 </head>
 <body>
     <div id="app">
@@ -63,87 +247,197 @@
         </section>
     </div>
 
-    <!-- Admin Login Modal (Hidden by default) -->
-    <div id="admin-login-modal" class="modal" style="display: none;">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <div class="login-container">
-                <h1>Admin Login</h1>
-                <form id="login-form">
-                    <input type="text" id="username" placeholder="Username" required>
-                    <input type="password" id="password" placeholder="Password" required>
-                    <button type="submit">Login</button>
-                </form>
-                <div id="error-message" class="error"></div>
-            </div>
-        </div>
-    </div>
+    <script>
+// Three.js 3D Scene Setup
+import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.module.js';
 
-    <!-- Admin Panel Modal (Hidden by default) -->
-    <div id="admin-panel-modal" class="modal" style="display: none;">
-        <div class="modal-content admin-modal">
-            <span class="close">&times;</span>
-            <div class="admin-container">
-                <header class="admin-header">
-                    <h1>Admin Panel</h1>
-                    <button id="logout-btn">Logout</button>
-                </header>
+let scene, camera, renderer, cube, torus, particles;
 
-                <nav class="admin-nav">
-                    <button class="tab-btn active" data-tab="profile">Profile</button>
-                    <button class="tab-btn" data-tab="about">About Me</button>
-                    <button class="tab-btn" data-tab="skills">Skills</button>
-                    <button class="tab-btn" data-tab="projects">Projects</button>
-                </nav>
+function initThreeJS() {
+    // Scene setup
+    scene = new THREE.Scene();
+    scene.background = new THREE.Color(0x0a0a0a);
 
-                <div class="admin-content">
-                    <!-- Profile Tab -->
-                    <div id="profile-tab" class="tab-content active">
-                        <h2>Profile Picture</h2>
-                        <input type="file" id="profile-pic-input" accept="image/*">
-                        <button id="update-profile-pic">Update Profile Picture</button>
-                    </div>
+    // Camera setup
+    camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    camera.position.z = 5;
 
-                    <!-- About Tab -->
-                    <div id="about-tab" class="tab-content">
-                        <h2>About Me</h2>
-                        <textarea id="about-text" rows="6" placeholder="Enter your about me text..."></textarea>
-                        <button id="update-about">Update About Me</button>
-                    </div>
+    // Renderer setup
+    renderer = new THREE.WebGLRenderer({ antialias: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.getElementById('hero-3d').appendChild(renderer.domElement);
 
-                    <!-- Skills Tab -->
-                    <div id="skills-tab" class="tab-content">
-                        <h2>Skills</h2>
-                        <div id="skills-inputs">
-                            <input type="text" class="skill-input" placeholder="Skill 1">
-                        </div>
-                        <button id="add-skill">Add Skill</button>
-                        <button id="update-skills">Update Skills</button>
-                    </div>
+    // Lighting
+    const ambientLight = new THREE.AmbientLight(0x404040, 0.6);
+    scene.add(ambientLight);
 
-                    <!-- Projects Tab -->
-                    <div id="projects-tab" class="tab-content">
-                        <h2>Projects</h2>
-                        <div id="projects-inputs">
-                            <div class="project-input">
-                                <input type="text" class="project-title" placeholder="Project Title">
-                                <textarea class="project-description" rows="3" placeholder="Project Description"></textarea>
-                                <input type="file" class="project-image" accept="image/*">
-                            </div>
-                        </div>
-                        <button id="add-project">Add Project</button>
-                        <button id="update-projects">Update Projects</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    const directionalLight = new THREE.DirectionalLight(0x00ff41, 0.8);
+    directionalLight.position.set(1, 1, 1);
+    scene.add(directionalLight);
 
-    <!-- Scripts -->
-    <script src="scripts/data.js"></script>
-    <script src="scripts/three.js"></script>
-    <script src="scripts/main.js"></script>
-    <script src="scripts/admin-login.js"></script>
-    <script src="scripts/admin-panel.js"></script>
+    // Create 3D objects
+    createObjects();
+
+    // Handle window resize
+    window.addEventListener('resize', onWindowResize, false);
+
+    // Start animation loop
+    animate();
+}
+
+function createObjects() {
+    // Cube
+    const cubeGeometry = new THREE.BoxGeometry(1, 1, 1);
+    const cubeMaterial = new THREE.MeshPhongMaterial({ color: 0x00ff41, wireframe: true });
+    cube = new THREE.Mesh(cubeGeometry, cubeMaterial);
+    cube.position.x = -2;
+    scene.add(cube);
+
+    // Torus
+    const torusGeometry = new THREE.TorusGeometry(1, 0.4, 16, 100);
+    const torusMaterial = new THREE.MeshPhongMaterial({ color: 0xff073a });
+    torus = new THREE.Mesh(torusGeometry, torusMaterial);
+    torus.position.x = 2;
+    scene.add(torus);
+
+    // Particles
+    const particlesGeometry = new THREE.BufferGeometry();
+    const particlesCount = 1000;
+    const positions = new Float32Array(particlesCount * 3);
+
+    for (let i = 0; i < particlesCount * 3; i++) {
+        positions[i] = (Math.random() - 0.5) * 20;
+    }
+
+    particlesGeometry.setAttribute('position', new THREE.BufferAttribute(positions, 3));
+    const particlesMaterial = new THREE.PointsMaterial({ color: 0xffffff, size: 0.02 });
+    particles = new THREE.Points(particlesGeometry, particlesMaterial);
+    scene.add(particles);
+}
+
+function animate() {
+    requestAnimationFrame(animate);
+
+    // Rotate objects
+    if (cube) cube.rotation.x += 0.01;
+    if (cube) cube.rotation.y += 0.01;
+
+    if (torus) torus.rotation.x += 0.005;
+    if (torus) torus.rotation.z += 0.01;
+
+    if (particles) particles.rotation.y += 0.001;
+
+    // Subtle camera movement
+    camera.position.x = Math.sin(Date.now() * 0.0005) * 0.5;
+    camera.position.y = Math.cos(Date.now() * 0.0003) * 0.3;
+
+    renderer.render(scene, camera);
+}
+
+function onWindowResize() {
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+}
+
+// Initialize Three.js when DOM is loaded
+document.addEventListener('DOMContentLoaded', initThreeJS);
+    </script>
+    <script>
+document.addEventListener('DOMContentLoaded', function() {
+    // Smooth scrolling for navigation
+    const links = document.querySelectorAll('a[href^="#"]');
+    links.forEach(link => {
+        link.addEventListener('click', function(e) {
+            e.preventDefault();
+            const target = document.querySelector(this.getAttribute('href'));
+            target.scrollIntoView({
+                behavior: 'smooth'
+            });
+        });
+    });
+
+    // Intersection Observer for fade-in animations
+    const observerOptions = {
+        threshold: 0.1,
+        rootMargin: '0px 0px -50px 0px'
+    };
+
+    const observer = new IntersectionObserver(function(entries) {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                entry.target.classList.add('fade-in');
+            }
+        });
+    }, observerOptions);
+
+    // Observe all sections
+    const sections = document.querySelectorAll('section');
+    sections.forEach(section => {
+        observer.observe(section);
+    });
+
+    // Load initial data
+    loadPortfolioData();
+});
+
+function loadPortfolioData() {
+    // This function will load data from localStorage or use default data
+    const data = JSON.parse(localStorage.getItem('portfolioData')) || getDefaultData();
+
+    // Update profile picture
+    if (data.profilePic) {
+        document.getElementById('profile-pic').src = data.profilePic;
+    }
+
+    // Update about me
+    if (data.about) {
+        document.getElementById('about-text').textContent = data.about;
+    }
+
+    // Update skills
+    if (data.skills) {
+        const skillsList = document.getElementById('skills-list');
+        skillsList.innerHTML = '';
+        data.skills.forEach(skill => {
+            const skillItem = document.createElement('div');
+            skillItem.className = 'skill-item';
+            skillItem.textContent = skill;
+            skillsList.appendChild(skillItem);
+        });
+    }
+
+    // Update projects
+    if (data.projects) {
+        const projectsList = document.getElementById('projects-list');
+        projectsList.innerHTML = '';
+        data.projects.forEach(project => {
+            const projectItem = document.createElement('div');
+            projectItem.className = 'project-item';
+            projectItem.innerHTML = `
+                <img src="${project.image || 'https://via.placeholder.com/300x200'}" alt="${project.title}">
+                <h3>${project.title}</h3>
+                <p>${project.description}</p>
+            `;
+            projectsList.appendChild(projectItem);
+        });
+    }
+}
+
+function getDefaultData() {
+    return {
+        profilePic: 'https://via.placeholder.com/200x200',
+        about: 'I am MD AFRID FOISAL OPU, a 2nd Semester CSE Student at IIUC. My focus areas include Cyber Security (learning), Web Development, and DSA. My vision is to become a skilled cybersecurity professional while building innovative web applications that make a difference. My goals include mastering ethical hacking techniques, developing full-stack web applications, and contributing to open-source projects.',
+        skills: ['Cyber Security', 'Web Development', 'Data Structures & Algorithms', 'JavaScript', 'HTML', 'CSS'],
+        projects: [
+            {
+                title: 'Blood for Life – Blood Bank Management Website',
+                description: 'A comprehensive blood bank management system to connect donors with those in need.',
+                image: 'https://via.placeholder.com/300x200'
+            }
+        ]
+    };
+}
+    </script>
 </body>
 </html>
